--- a/highlight/templates/highlight_detail.html
+++ b/highlight/templates/highlight_detail.html
@@ -62,6 +62,7 @@
       <div class="p-6">
         <h2 class="text-lg font-semibold text-gray-800 mb-4">Statistik</h2>
         <div class="overflow-x-auto">
+          {% if highlight.home and highlight.away %}
           <table class="min-w-full divide-y divide-gray-300">
             <thead class="bg-gray-400">
               <tr>
@@ -70,38 +71,65 @@
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Win</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Tie</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Lose</th>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Win Rate</th>
               </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
               <thead class="bg-gray-100">
               <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Team A</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">10</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">7</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">2</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">1</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">70%</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{highlight.home.}}{{highlight.home.team}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.played}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.won}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.drawn}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.lost}}</td>
               </tr>
               </thead>
               <tr>
                 <thead class="bg-gray-100">
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Team B</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">10</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">1</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">2</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">7</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">10%</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{highlight.away.team}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.away.played}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.away.won}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.away.drawn}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.away.lost}}</td>
                 </thead>
               </tr>
             </tbody>
           </table>
+          {% else %}
+          <table class="min-w-full divide-y divide-gray-300">
+            <thead class="bg-gray-400">
+              <tr>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Team</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Match</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Win</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Tie</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-100 uppercase tracking-wider">Lose</th>
+              </tr>
+            </thead>
+            <tbody class="bg-white divide-y divide-gray-200">
+              <thead class="bg-gray-100">
+              <tr>
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Home</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+              </tr>
+              </thead>
+              <tr>
+                <thead class="bg-gray-100">
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Away</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"></td>
+                </thead>
+              </tr>
+            </tbody>
+          </table>
+          {% endif %}
         </div>
       </div>
-          
           {% include 'komen_like_rate/komen.html' with highlight=highlight %}
-
-
     </div>
   </div>
 </div>
